# fsh-cicd

./: README.md  config.py  frans_api_helper.py  petstore_api_client.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
tests/: test_calculator.py
tests/api/: test_frans_api_2026.py  test_petstore_api.py
tests/e2e/: test_frans_api_2026.py  test_frans_ui.py
